# rFaaS

./: .gitignore  2out  CITATION.cff  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  errors  notes  out
benchmarks/: cold_benchmark.cpp  cold_benchmark.hpp  cold_benchmark_opts.cpp  cpp_interface.cpp  cpp_interface.hpp  cpp_interface_opts.cpp  credentials.cpp  parallel_invocations.cpp  parallel_invocations.hpp  parallel_invocations_opts.cpp  rma.cpp  scalable_benchmark.cpp  scalable_benchmark.hpp  scalable_benchmark.py  scalable_benchmark_opts.cpp  settings.cpp  settings.hpp  warm_benchmark.cpp  warm_benchmark.hpp  warm_benchmark_opts.cpp
benchmarks/applications/mpi/: .mmm.cpp.swp  mmm-faas.cpp  mmm.cpp  mmm.h
benchmarks/applications/util/: settings.hpp
client/: benchmarker.hpp  client.cpp  client.hpp  conn.cpp  opts.cpp
cmake/: benchmarks.cmake  dependencies.cmake  examples.cmake  testing.cmake  tools.cmake
config/: benchmark.json  devices.json  executor_manager.json  executor_manager_backup.json  executors_database.json  resource_manager.json
containers/: build_base.sh  build_tests.sh  init_docker.sh  net.sh  rfaas-base.Dockerfile  rfaas.Dockerfile  run.sh
containers/config/certs/: domain.crt  domain.csr  domain.key  domain.unencrypted.key
containers/test/: run.sh
docs/: benchmarks.md  client_library.md  docker.md  examples.md  libfabric_notes.md  rdma_library.md  system.md  testing.md  tutorial.md
examples/: functions.cpp  rma_functions.cpp
examples/image-recognition/: client.cpp  function.hpp  functions.cpp  opts.hpp
examples/thumbnailer/: client.cpp  function.hpp  functions.cpp  opts.cpp
rdmalib/include/: rdmalib.hpp
rdmalib/include/rdmalib/: allocation.hpp  benchmarker copy.hpp  benchmarker.hpp  buffer.hpp  connection.hpp  functions.hpp  libraries.hpp  poller.hpp  queue.hpp  rdmalib.hpp  recv_buffer.hpp  server.hpp  util.hpp
rdmalib/lib/: buffer.cpp  connection.cpp  functions.cpp  poller.cpp  queue.cpp  rdmalib.cpp  server.cpp  util.cpp
rfaas/include/rfaas/: allocation.hpp  client.hpp  connection.hpp  devices.hpp  executor.hpp  rdma_allocator.hpp  resources.hpp  rfaas.hpp
rfaas/lib/: connection.cpp  devices.cpp  executor.cpp  rdma_allocator.cpp  resources.cpp
scripts/: kill_executor_manager.sh  push_image.sh  registry.yaml  run.sh  run_debug.sh  run_executor_manager.sh  run_registry.sh  setup.sh  setup.sh.in
scripts/docker/: registry.yaml
server/: common.hpp  executor.cpp  executor_manager.cpp  fast_executor.cpp  fast_executor.hpp  functions.cpp  functions.hpp  manager.cpp  manager.hpp  opts.cpp  server.cpp  server.hpp  structures.hpp  wc_buffer.hpp
server/common/: messages.hpp
server/executor/: cli.cpp  fast_executor.cpp  fast_executor.hpp  functions.cpp  functions.hpp  opts.cpp  opts.hpp  server.cpp  server.hpp
server/executor_manager/: accounting.hpp  cli.cpp  client.cpp  client.hpp  executor_process.cpp  executor_process.hpp  manager.cpp  manager.hpp  opts.cpp  settings.cpp  settings.hpp
server/resource_manager/: cli.cpp  client.cpp  client.hpp  db.cpp  db.hpp  executor.cpp  executor.hpp  http.cpp  http.hpp  manager.cpp  manager.hpp  opts.cpp  settings.cpp  settings.hpp
tests/: basic_allocation_test.cpp  cold_benchmark.cpp  cold_benchmark.hpp  cold_benchmark_opts.cpp  config.h  config.h.in  cpp_interface.cpp  parallel_invocations.cpp  parallel_invocations.hpp  parallel_invocations_opts.cpp  warm_benchmark.cpp  warm_benchmark.hpp  warm_benchmark_opts.cpp
tools/: CMakeLists.txt  device_generator.sh  remote_device_generator.sh  ssh_device_generator.sh
tools/scheduling_simulator/: CMakeLists.txt  client.cpp  executor.cpp  executors.cpp  executors.hpp  message.cpp  mpi_log.hpp  opts.cpp  results.hpp  simulator.cpp  simulator.hpp
